@@ -106,11 +106,11 @@ unsigned IsPACX (unsigned EvType)
 }
 
 
-#define MISC_EVENTS 38
+#define MISC_EVENTS 40
 static unsigned misc_events[] = {FLUSH_EV, READ_EV, WRITE_EV, APPL_EV, USER_EV,
 	HWC_DEF_EV, HWC_CHANGE_EV, HWC_EV, TRACING_EV, SET_TRACE_EV, CALLER_EV,
 	CPU_BURST_EV, RUSAGE_EV, MEMUSAGE_EV, MPI_STATS_EV, USRFUNC_EV,
-	SAMPLING_EV, SAMPLING_ADDRESS_EV,
+	SAMPLING_EV, SAMPLING_ADDRESS_EV, SAMPLING_ADDRESS_MEM_LEVEL_EV, SAMPLING_ADDRESS_TLB_LEVEL_EV,
 	HWC_SET_OVERFLOW_EV, TRACING_MODE_EV, ONLINE_EV, USER_SEND_EV, USER_RECV_EV,
 	RESUME_VIRTUAL_THREAD_EV, SUSPEND_VIRTUAL_THREAD_EV, TRACE_INIT_EV,
 	REGISTER_STACKED_TYPE_EV, REGISTER_CODELOCATION_TYPE_EV,
