@@ -80,7 +80,11 @@ unsigned IsMPICollective (unsigned EvType);
 #define SAMPLING_LINE_EV         30000100
 #define SAMPLING_CALLER_OFFSET     100000
 #define HWC_SET_OVERFLOW_EV      31000000
-#define SAMPLING_ADDRESS_EV      32000000
+#define SAMPLING_ADDRESS_EV                  32000000
+#define SAMPLING_ADDRESS_MEM_LEVEL_EV        32000001
+#define SAMPLING_ADDRESS_MEM_HITORMISS_EV    32000002
+#define SAMPLING_ADDRESS_TLB_LEVEL_EV        32000003
+#define SAMPLING_ADDRESS_TLB_HITORMISS_EV    32000004
 
 #define APPL_EV                  40000001
 #define TRACE_INIT_EV            40000002
