@@ -61,6 +61,12 @@ void Share_MISC_Operations (void);
 #define DYNAMIC_MEM_POINTER_IN_LBL      "In pointer (free, realloc)"
 #define DYNAMIC_MEM_POINTER_OUT_LBL     "Out pointer (malloc, calloc, realloc)"
 
+#define SAMPLING_ADDRESS_LBL            "Sampled address"
+#define SAMPLING_ADDRESS_MEM_LEVEL_LBL  "Memory hierarchy location for sampled address"
+#define SAMPLING_ADDRESS_MEM_HITORMISS_LBL  "Memory hierarchy location for sampled address hit?"
+#define SAMPLING_ADDRESS_TLB_LEVEL_LBL  "TLB hierarchy location for sampled address"
+#define SAMPLING_ADDRESS_TLB_HITORMISS_LBL  "TLB hierarchy location for sampled address hit?"
+
 #define IO_LBL                          "I/O calls"
 #define READ_LBL                        "read()"
 #define WRITE_LBL                       "write()"
